# RedPanda-CPP

./: .gitignore  BUILD.md  BUILD_cn.md  BUILD_ru.md  CMakeLists.txt  NEWS.md  Red_Panda_CPP.pro  version.json  xmake.lua
.github/workflows/: build-official-qt.yml  build-static-qt.yml  build-system-qt.yml  (+2 more)
RedPandaIDE/: CMakeLists.txt  RedPandaIDE.pro  autolinkmanager.cpp  autolinkmanager.h  cpprefacter.cpp  cpprefacter.h  editor.cpp  editor.h  editorlist.cpp  editorlist.h  iconsmanager.cpp  iconsmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  project.cpp  settings.cpp  settings.h  systemconsts.cpp  thememanager.cpp  thememanager.h  utils.cpp  utils.h  xmake.lua
RedPandaIDE/addon/: api.cpp  api.h  runtime.cpp  runtime.h  theme.js
RedPandaIDE/compiler/: builtinterminalrunner.cpp  compiler.cpp  compiler.h  compilerinfo.cpp  compilerinfo.h  compilermanager.cpp  compilermanager.h  executablerunner.cpp  filecompiler.cpp  projectcompiler.cpp  projectcompiler.h  sdccprojectcompiler.cpp  sdccprojectcompiler.h  stdincompiler.cpp
RedPandaIDE/debugger/: debugger.cpp
RedPandaIDE/llm/: llmservice.cpp  llmservice.h
RedPandaIDE/parser/: cppparser.cpp  cpppreprocessor.cpp  cpptokenizer.h  parserutils.cpp  parserutils.h
RedPandaIDE/project/: compilationdatabaseproject.cpp  compilationdatabaseproject.h  devcppproject.cpp  devcppproject.h  project.cpp  project.h  projectoptions.cpp  projectoptions.h  projecttemplate.cpp  projecttemplate.h
RedPandaIDE/resources/: autolink-xdg.json  autolink.json  windows_icon.rc
RedPandaIDE/resources/themes/: breeze.json  breeze.lua  breeze_dark.json  breeze_dark.lua  breeze_light.json  breeze_light.lua  dark.json  default.json  fusion.lua  none.json  phantom.json
RedPandaIDE/runner/: builtinterminalrunner.h  executablerunner.cpp  executablerunner.h  runner.cpp
RedPandaIDE/settingsdialog/: compilerautolinkwidget.cpp  compilerbuildmode.cpp  compilerbuildmode.h  compilerbuildmode.ui  compilersetoptionwidget.cpp  compilersetoptionwidget.h  compilersetoptionwidget.ui  editorcodecompletionwidget.cpp  editorcodecompletionwidget.ui  editorfontwidget.cpp  editorfontwidget.h  editorfontwidget.ui  environmentappearancewidget.cpp  environmentfileassociationwidget.cpp  environmentfileassociationwidget.h  environmentfileassociationwidget.ui  environmentprogramswidget.cpp  environmentprogramswidget.ui  llmsettingswidget.cpp  llmsettingswidget.h  llmsettingswidget.ui  projectcompileparamaterswidget.cpp  projectcompilerwidget.cpp  projectcompilerwidget.h  projectcompilerwidget.ui  projectdirectorieswidget.cpp  projectdllhostwidget.cpp  projectfileswidget.cpp  projectfileswidget.h  projectgeneralwidget.cpp  projectmakefilewidget.cpp  projectoutputwidget.cpp  projectprecompilewidget.cpp  settingsdialog.cpp
RedPandaIDE/src/: editormanager.cpp  irunner.h  main.cpp  mainwindow.cpp  mainwindow.h  project.cpp  project.h  projectoptions.h  settings.cpp  settings.h
RedPandaIDE/src/compiler/: compiler.cpp  compiler.h  compilerinfo.cpp  compilerinfo.h  compilermanager.cpp  executablerunner.cpp  executablerunner.h  filecompiler.cpp  nasmfilecompiler.cpp  ojproblemcasesrunner.cpp  projectcompiler.cpp  sdccfilecompiler.cpp  sdccprojectcompiler.cpp  stdincompiler.cpp
RedPandaIDE/src/debugger/: debugger.cpp  debugger.h
RedPandaIDE/src/runner/: builtinterminalrunner.cpp  builtinterminalrunner.h  wslrunner.cpp  wslrunner.h
RedPandaIDE/src/settings/: buildconfig.h  buildconfig_json.cpp  buildconfig_json.h  buildconfigmanager.cpp  buildconfigmanager.h  compilationstage.h  compileoptionsassembler.cpp  compileoptionsassembler.h  compilersetsettings.cpp  environmentsettings.cpp  environmentsettings.h  toolchain.cpp  toolchain.h  toolchain_detect.cpp  toolchain_detect.h  toolchain_json.cpp  toolchain_json.h  toolchainmanager.cpp  toolchainmanager.h
RedPandaIDE/src/settingsdialog/: buildconfigsettingswidget.cpp  buildconfigsettingswidget.h  buildconfigsettingswidget.ui  compilersetoptionwidget.cpp  directorylistwidget.cpp  directorylistwidget.h  directorylistwidget.ui  editorcolorschemewidget.cpp  environmentprogramswidget.cpp  environmentprogramswidget.h  environmentprogramswidget.ui  projectcompilerwidget.cpp  projectcompilerwidget.h  projectcompilerwidget.ui  projectdirectorieswidget.cpp  projectdirectorieswidget.h  projectmakefilewidget.cpp  projectmakefilewidget.h  settingsdialog.cpp  toolchainsettingswidget.cpp  toolchainsettingswidget.h  toolchainsettingswidget.ui
RedPandaIDE/src/utils/: llvm-triple.cpp  llvm-triple.h  llvm-util.hpp  parser.cpp  parser.h  toolchain.cpp  toolchain.h
RedPandaIDE/src/widgets/: compileargumentswidget.cpp  compileargumentswidget.h  newprojectdialog.cpp
RedPandaIDE/themes/: contrast.js  dark.js  default.js  system.js
RedPandaIDE/utils/: sharedmemory.cpp  sharedmemory.h
RedPandaIDE/widgets/: classbrowser.h  functiontooltipwidget.cpp  llmresultwindow.cpp  llmresultwindow.h  llmresultwindow.ui  newprojectdialog.cpp  newprojectdialog.h  newtemplatedialog.cpp  searchinfiledialog.cpp
addon/: gen.sh
docs/: detailed-build-win-cn.md  detailed-build-win.md  detailed-build-xdg-cn.md  detailed-build-xdg.md  encoding.md  finding-compiler.md  windows-code-page-list.csv
libs/qsynedit/: CMakeLists.txt  qsynedit.pro
libs/qsynedit/qsynedit/: document.cpp  document.h
libs/qsynedit/qsynedit/exporter/: exporter.cpp
libs/qsynedit/qsynedit/syntaxer/: asm.cpp  cpp.cpp  glsl.cpp  lua.cpp
libs/qtermwidget/: CMakeLists.txt  qtermwidget.pro  xmake.lua
libs/qtermwidget/qtermwidget/: qtermwidget_export.h  qtermwidget_version.h
libs/redpanda_qt_utils/: CMakeLists.txt  redpanda_qt_utils.pro  xmake.lua
libs/redpanda_qt_utils/qt_utils/: charsetinfo.cpp  charsetinfo.h  utils.cpp  utils.h
tools/consolepauser/: CMakeLists.txt  consolepauser.pro  intl.hpp  main.unix.cpp  main.windows.cpp  mo-data.cpp  update-po-mo.sh  xmake.lua
tools/consolepauser/mo/: zh_CN.mo  zh_TW.mo
tools/consolepauser/po/: unified.pot  zh_CN.po  zh_TW.po
tools/redpanda-git-askpass/: CMakeLists.txt
tools/redpanda-win-git-askpass/: CMakeLists.txt
(+46 files in other folders)
